Modularized JDKMon